--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: ruby
+
 rvm:
   - 1.9.3
   - 2.0.0
-script: 'bundle exec rake'
+
+install:
+  - bundle install
+
+script:
+  - bundle exec rake
